--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
     <head>
         <meta http-equiv="Content-type" content="text/html; charset=utf-8"/>
-        <title>{%= o.htmlWebpackPlugin.options.title %}</title>
+        <title>Map blog</title>
         <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.css" />
     </head>
     <body>
         
-    </body>
+    <script src="bundle.js"></script></body>
 </html>
